syntax = "proto3";

package api.grpc;

option java_multiple_files = true;
option java_package = "com.behindthegoal.grpc";
option java_outer_classname = "FootballServiceProto";


service FootballService {
    
    rpc ListLeagues (Empty) returns (LeagueListResponse);

    rpc ListTeams (LeagueRequest) returns (TeamListResponse);

    rpc GetMatchStats (MatchStatsRequest) returns (MatchStatsResponse);
}


message League {
    int64 id = 1;
    string name = 2;
    string country = 3;
}


message Team {
    int64 id = 1;
    string name = 2;
    int32 points = 3;
    int64 league_id = 4;
}


message Match {
    int64 id = 1;
    int64 home_team_id = 2;
    int64 away_team_id = 3;
    int32 home_team_score = 4;
    int32 away_team_score = 5;
    string match_date = 6;
}


message MatchStats {
    int64 match_id = 1;
    int64 team_id = 2;
    int32 goals = 3;
    int32 yellow_cards = 4;
    int32 red_cards = 5;
    int32 shots = 6;
    int32 shots_on_target = 7;
    int32 possession = 8;
    int32 fouls_committed = 9;
}

message Empty {}

message LeagueRequest {
    int64 league_id = 1;
}

message LeagueListResponse {
    repeated League leagues = 1;
}

message TeamListResponse {
    repeated Team teams = 1;
}

message MatchStatsRequest {
    int64 match_id = 1;
}

message MatchStatsResponse {
    repeated MatchStats match_stats = 1;
}